@@ -135,116 +135,6 @@
             </dependencies>
         </profile>
         <profile>
-            <id>glassfish-cargo</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
-                        <version>1.4.11</version>
-                        <inherited>true</inherited>
-                        <executions>
-                            <execution>
-                                <id>start-container</id>
-                                <phase>pre-integration-test</phase>
-                                <goals>
-                                    <goal>start</goal>
-                                </goals>
-                                <configuration>
-                                    <timeout>2400000</timeout>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>stop-container</id>
-                                <phase>post-integration-test</phase>
-                                <goals>
-                                    <goal>stop</goal>
-                                </goals>
-                                <configuration>
-                                    <timeout>2400000</timeout>
-                                </configuration>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <container>
-                                <containerId>${glassfish.cargo.id}</containerId>
-                                <type>installed</type>
-                                <home>${glassfish.cargo.home}</home>
-                                <timeout>2400000</timeout>
-                            </container>
-                            <configuration>
-                                <type>${glassfish.cargo.configType}</type>
-                                <home>${glassfish.cargo.config}</home>
-                                <properties>
-                                    <cargo.hostname>${glassfish.cargo.serverName}</cargo.hostname>
-                                    <cargo.servlet.port>${glassfish.cargo.servletPort}</cargo.servlet.port>
-                                    <cargo.glassfish.domain.name>${glassfish.cargo.domain}</cargo.glassfish.domain.name>
-                                </properties>
-                            </configuration>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-            <properties>
-                <glassfish.cargo.home>C:/Glassfish4.1</glassfish.cargo.home>
-                <glassfish.cargo.configType>standalone</glassfish.cargo.configType>
-                <glassfish.cargo.config>${glassfish.cargo.home}/glassfish/domains</glassfish.cargo.config>
-                <glassfish.cargo.domain>domain1</glassfish.cargo.domain>
-                <glassfish.cargo.id>glassfish4x</glassfish.cargo.id>
-                <glassfish.cargo.serverName>localhost</glassfish.cargo.serverName>
-                <glassfish.cargo.servletPort>8080</glassfish.cargo.servletPort>
-            </properties>
-        </profile>
-        <profile>
-            <id>glassfish-unzip</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.8</version>
-                        <executions>
-                            <execution>
-                                <id>prepare</id>
-                                <phase>validate</phase>
-                                <configuration>
-                                    <target>
-                                        <delete quiet="true" failonerror="false" dir="${glassfish.unzip.unzipDir}" />
-                                        <mkdir dir="${glassfish.unzip.unzipDir}" />
-                                        <unzip src="${glassfish.unzip.zipFile}" dest="${glassfish.unzip.unzipDir}" />
-                                        <exec executable="sh" osfamily="unix">
-                                            <arg line="-c &quot;chmod a+x ${glassfish.unzip.home}/glassfish/bin/*&quot;" />
-                                        </exec>
-                                    </target>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <dependencies>
-                            <dependency>
-                                <groupId>ant-contrib</groupId>
-                                <artifactId>ant-contrib</artifactId>
-                                <version>1.0b3</version>
-                                <exclusions>
-                                    <exclusion>
-                                        <groupId>ant</groupId>
-                                        <artifactId>ant</artifactId>
-                                    </exclusion>
-                                </exclusions>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
-                </plugins>
-            </build>
-            <properties>
-                <glassfish.unzip.unzipDir>C:/</glassfish.unzip.unzipDir>
-                <glassfish.unzip.home>C:/glassfish4</glassfish.unzip.home>
-                <glassfish.unzip.zipFile>C:/Downloads/Glassfish4.1.zip</glassfish.unzip.zipFile>
-            </properties>
-        </profile>
-        <profile>
             <id>integration</id>
             <build>
                 <plugins>
@@ -297,99 +187,6 @@
                     </plugin>
                 </plugins>
             </reporting>
-        </profile>
-        <profile>
-            <id>weblogic-cargo</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.oracle.weblogic</groupId>
-                        <artifactId>wls-maven-plugin</artifactId>
-                        <version>12.1.3.0</version>
-                        <inherited>true</inherited>
-                        <executions>
-                            <execution>
-                                <id>deploy</id>
-                                <phase>pre-integration-test</phase>
-                                <goals>
-                                    <goal>deploy</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>undeploy</id>
-                                <phase>post-integration-test</phase>
-                                <goals>
-                                    <goal>undeploy</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-            <properties>
-                <weblogic.cargo.home>C:/Wls1214</weblogic.cargo.home>
-                <weblogic.cargo.wlservername>myserver</weblogic.cargo.wlservername>
-                <weblogic.cargo.username>admin</weblogic.cargo.username>
-                <weblogic.cargo.password>adminadmin1</weblogic.cargo.password>
-                <weblogic.cargo.wldomain>${weblogic.cargo.home}/user_projects/domains/mydomain</weblogic.cargo.wldomain>
-                <weblogic.cargo.wlserver>${weblogic.cargo.home}/wlserver</weblogic.cargo.wlserver>
-                <weblogic.cargo.memargs>-Xms512m -Xmx786m -XX:MaxPermSize=786m</weblogic.cargo.memargs>
-                <adminurl>t3://localhost:7001</adminurl>
-                <domainHome>${weblogic.cargo.wldomain}</domainHome>
-                <middlewareHome>${weblogic.cargo.home}</middlewareHome>
-                <weblogicHome>${weblogic.cargo.wlserver}</weblogicHome>
-                <user>${weblogic.cargo.username}</user>
-                <password>${weblogic.cargo.password}</password>
-                <name>${project.build.finalName}</name>
-                <failOnError>false</failOnError>
-                <timeout>60</timeout>
-            </properties>
-        </profile>
-        <profile>
-            <id>weblogic-start</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.oracle.weblogic</groupId>
-                        <artifactId>wls-maven-plugin</artifactId>
-                        <version>12.1.3.0</version>
-                        <inherited>true</inherited>
-                        <executions>
-                            <execution>
-                                <id>startServer</id>
-                                <phase>install</phase>
-                                <configuration>
-                                    <script>
-                                        startServer(
-                                        'AdminServer', 'mydomain', 't3://localhost:7001', '${weblogic.cargo.username}',
-                                        '${weblogic.cargo.password}', '${weblogic.cargo.wldomain}', jvmArgs='${weblogic.cargo.memargs}')
-                                    </script>
-                                </configuration>
-                                <goals>
-                                    <goal>wlst</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-            <properties>
-                <weblogic.cargo.home>C:/Wls1214</weblogic.cargo.home>
-                <weblogic.cargo.wlservername>myserver</weblogic.cargo.wlservername>
-                <weblogic.cargo.username>admin</weblogic.cargo.username>
-                <weblogic.cargo.password>adminadmin1</weblogic.cargo.password>
-                <weblogic.cargo.wldomain>${weblogic.cargo.home}/user_projects/domains/mydomain</weblogic.cargo.wldomain>
-                <weblogic.cargo.wlserver>${weblogic.cargo.home}/wlserver</weblogic.cargo.wlserver>
-                <weblogic.cargo.memargs>-Xms512m, -Xmx786m, -XX:MaxPermSize=786m, -Xrs</weblogic.cargo.memargs>
-                <domainHome>${weblogic.cargo.wldomain}</domainHome>
-                <middlewareHome>${weblogic.cargo.home}</middlewareHome>
-                <weblogicHome>${weblogic.cargo.wlserver}</weblogicHome>
-                <user>${weblogic.cargo.username}</user>
-                <password>${weblogic.cargo.password}</password>
-                <name>${project.build.finalName}</name>
-                <failOnError>false</failOnError>
-                <timeout>60</timeout>
-            </properties>
         </profile>
     </profiles>
 </project>
